# ML-Based-Intelligent-WhatsApp-Assistant-for-University-FAQs

./: Jamshaid FYP SDD.docx  Jamshaid FYP SRS.docx  main.py  pyproject.toml  test_webhook.py
api/: whatsapp_webhook.py
data/: synthetic_faq_dataset.csv
source/: schemas.py
src/: conversation_logger.py  rag_faq_bot.py
